--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 PROG = slists
 CFLAGS = -Wall -g -ansi -pedantic
 OBJMODULES = file_data.o file_parser.o section_dbl.o item_dbl.o config.o\
-			 util.o
+			 util.o command.o
 
 .PHONY: clean install
 
