--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 PROG = slist
 CFLAGS = -Wall -g -ansi -pedantic
 OBJMODULES = file_data.o file_parser.o section_dbl.o item_dbl.o config.o\
-			 parsed_str.o util.o command.o
+			 string.o util.o command.o
 
 .PHONY: clean install
 
